fix(arc-1784): make hamburger menu right aligned on ipad
https://meemoo.atlassian.net/browse/ARC-1784

--- a/src/modules/navigation/components/Navigation/Navigation.module.scss
+++ b/src/modules/navigation/components/Navigation/Navigation.module.scss
@@ -471,6 +471,7 @@ $c-navigation-decoration: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDo
 			@include respond-to(xxl) {
 				display: flex;
 				justify-self: center;
+				margin-left: auto;
 			}
 		}
 	}
